# kagezo

./: CODE-OF-CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  go.mod  tracker.go  worker.go
Server/: .env.example  package-lock.json  package.json
Server/src/: index.js
Server/src/configs/: cloudinary.config.js  db.config.js  server.config.js
Server/src/controllers/: file.controller.js  user.controller.js
Server/src/middlewares/: multer.middleware.js
Server/src/repositories/: file.repository.js  user.repository.js
Server/src/routes/: file.routes.js  user.routes.js
Server/src/schemas/: file.schema.js  user.schema.js
Server/src/services/: file.service.js  user.service.js
Server/uploads/: temp.txt
scripts/: bump_gofmt.sh  check_filename.sh
shell/: CMakeLists.txt
shell/include/: commands.hpp  shell.hpp  utils.hpp
shell/src/: commands.cpp  shell.cpp  spawn.cpp  utils.cpp
tracker/: config.go  file_tracker.go  logger.go  stub.go
worker/: config.go  core.go  stub.go  utils.go
